--- a/readme.html
+++ b/readme.html
@@ -604,7 +604,7 @@ long track.</p>
 by Udacity. The following steps are applied (all line references in relationship
 to <code>main.cpp</code>):</p>
 <ol>
-<li><p>ll. 248-340: All cars from the sensor fusion data are examined and we are
+<li><p>ll. 248-360: All cars from the sensor fusion data are examined and we are
 performing a high-level decision whether changing lanes (<code>my_ref_lane</code>) or
 changing speed (<code>my_ref_speed</code>). Influencing the cars decision are:</p>
 <ul>
@@ -615,29 +615,32 @@ lanes and <em>must</em> slow down? This also includes cars that are switching la
 and thusly have a horizontal velocity component in Frenet space.
 (<code>bool dont_go_left</code> and <code>bool dont_go_right</code>)</li>
 <li>Also, we do not change lanes if we are already in a right-most or left-most
-lane; we also don&#39;t perform a double-lane-change (checking <code>changing_lanes</code>)
-or a lange change below 20mph.</li>
+lane; we also don&#39;t perform a double-lane-change (checking <code>changing_lanes</code>)   or a lange change below 20mph.</li>
+<li>Is the distance to the closest car in front of us in the target lane
+greater than the distance to the car in front of us in our lane (by
+examining <code>double min_dist_left</code>, <code>double min_dist_right</code> and
+<code>double min_dist_here</code>).</li>
 </ul>
 </li>
-<li><p>ll. 342-404: A spline is constructed to sample new trajectory points from</p>
+<li><p>ll. 362-424: A spline is constructed to sample new trajectory points from</p>
 <ul>
 <li>Its first control points are the last two points of the non-processed/remaining
 path that is returned by the simulator.</li>
 <li>If currently no points were returned by the simulator, it starts with the
 current vehicle position.</li>
 <li>To that, 3 more control points with distance 30, 60 and 90m ahead of the
-last point in Frenet space are added. (ll. 380-386)</li>
+last point in Frenet space are added. (ll. 400-406)</li>
 <li>The spline control points are transformed to vehicle coordinates with x
 pointing ahead, so that the spline is a well-defined function with unique
-x-to-y resolution for all x. (ll. 393-400)</li>
+x-to-y resolution for all x. (ll. 413-420)</li>
 </ul>
 </li>
-<li><p>ll. 406-443: The spline is sampled to return the trajectory points that the
+<li><p>ll. 426-463: The spline is sampled to return the trajectory points that the
 path should follow.</p>
 <ul>
 <li>The spline is first filled with the points that were returned from the
-simulator and were not processed yet (ll. 410-414)</li>
-<li>The spline is always sampled up to 30m ahead (<code>target_x_car</code>, ll. 419).</li>
+simulator and were not processed yet (ll. 430-434)</li>
+<li>The spline is always sampled up to 30m ahead (<code>target_x_car</code>, ll. 439).</li>
 <li>The number of points that are sampled (and the distance between the sampled
 points) is determined by the reference velocity, so that the car covers the
 correct distance between each trajectory point of which one is passed every 0.2s.   </li>
@@ -649,17 +652,17 @@ that make me pass each aspect of the rubric requirement of &quot;no incident occ
 <h3 id="driving-according-to-speed-limit">Driving According to Speed Limit</h3>
 <ul>
 <li>The speed limit is checked first in (1.) (see above) by only increasing the
-reference velocity if the speed limit is not reached (see ll. 337 ff.):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span>}&nbsp;</span><span class="keyword control c"><span>else</span></span><span>&nbsp;</span><span class="keyword control c"><span>if</span></span><span>&nbsp;(my_ref_vel&nbsp;&lt;&nbsp;</span><span class="constant numeric c"><span>49.5</span></span><span>)&nbsp;</span><span class="meta block c"><span class="punctuation section block begin c"><span>{</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;if&nbsp;we&nbsp;are&nbsp;too&nbsp;slow,&nbsp;speed&nbsp;up&nbsp;(obeying&nbsp;max.&nbsp;accell.&nbsp;&amp;&nbsp;velocity)</span><span>&nbsp;</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span>&nbsp;my_ref_vel&nbsp;+=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation section block end c"><span>}</span></span></span></span></div></pre>
+reference velocity if the speed limit is not reached (see ll. 357 ff.):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span>}&nbsp;</span><span class="keyword control c"><span>else</span></span><span>&nbsp;</span><span class="keyword control c"><span>if</span></span><span>&nbsp;(my_ref_vel&nbsp;&lt;&nbsp;</span><span class="constant numeric c"><span>49.5</span></span><span>)&nbsp;</span><span class="meta block c"><span class="punctuation section block begin c"><span>{</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;if&nbsp;we&nbsp;are&nbsp;too&nbsp;slow,&nbsp;speed&nbsp;up&nbsp;(obeying&nbsp;max.&nbsp;accell.&nbsp;&amp;&nbsp;velocity)</span><span>&nbsp;</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span>&nbsp;my_ref_vel&nbsp;+=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation section block end c"><span>}</span></span></span></span></div></pre>
 </li>
 <li>In order to obey the reference velocity, the distance and number of data
 points sampled along the spline in (3.) (see above) is dependent on the
-reference velocity (see ll. 424f.):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;calculate&nbsp;spacing&nbsp;of&nbsp;points&nbsp;needed&nbsp;to&nbsp;find&nbsp;reference&nbsp;velocity</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span class="storage type c"><span>double</span></span><span>&nbsp;num_points&nbsp;=&nbsp;target_dist&nbsp;/&nbsp;(.</span><span class="constant numeric c"><span>02</span></span><span>*my_ref_vel/</span><span class="constant numeric c"><span>2.24</span></span><span>);</span></span></div></pre>
+reference velocity (see ll. 444f.):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;calculate&nbsp;spacing&nbsp;of&nbsp;points&nbsp;needed&nbsp;to&nbsp;find&nbsp;reference&nbsp;velocity</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span class="storage type c"><span>double</span></span><span>&nbsp;num_points&nbsp;=&nbsp;target_dist&nbsp;/&nbsp;(.</span><span class="constant numeric c"><span>02</span></span><span>*my_ref_vel/</span><span class="constant numeric c"><span>2.24</span></span><span>);</span></span></div></pre>
 </li>
 </ul>
 <h3 id="obeying-maximum-acceleration-and-jerk">Obeying Maximum Acceleration and Jerk</h3>
 <ul>
 <li>Maximum acceleration and jerk are obeyed by only increasing and decreasing
-the velocity in small increments in (1.) (see above) (see ll. 329 + 339):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span>my_ref_vel&nbsp;-=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></div><div class="line"><span class="source cpp"><span>[...]</span></span></div><div class="line"><span class="source cpp"><span>my_ref_vel&nbsp;+=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></div></pre>
+the velocity in small increments in (1.) (see above) (see ll. 349 + 359):<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span>my_ref_vel&nbsp;-=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></div><div class="line"><span class="source cpp"><span>[...]</span></span></div><div class="line"><span class="source cpp"><span>my_ref_vel&nbsp;+=&nbsp;.</span><span class="constant numeric c"><span>224</span></span><span>;</span></span></div></pre>
 </li>
 <li>Even then, some exceeding jerk and acceleration can happen if a lane change
 across multiple lanes occured. In order to register whether we are changing
@@ -684,7 +687,7 @@ we also account for the following high-level observations:</p>
 section)</li>
 <li>We do not change lanes if our speed is below 20mph.</li>
 </ul>
-<p>See also ll. 323ff.:</p>
+<p>See also ll. 343ff.:</p>
 <pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;if&nbsp;car&nbsp;too&nbsp;close&nbsp;is&nbsp;in&nbsp;front&nbsp;of&nbsp;car</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span class="keyword control c"><span>if</span></span><span>&nbsp;(change_lanes_or_slow_down)&nbsp;</span><span class="meta block c"><span class="punctuation section block begin c"><span>{</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;if&nbsp;we&nbsp;are&nbsp;already&nbsp;changing&nbsp;lanes&nbsp;or&nbsp;cannot&nbsp;change</span><span>&nbsp;</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span>&nbsp;&nbsp;</span><span class="keyword control c"><span>if</span></span><span>&nbsp;(changing_lanes&nbsp;||&nbsp;(dont_go_left&nbsp;&amp;&amp;&nbsp;dont_go_right)&nbsp;||&nbsp;my_ref_vel&nbsp;&lt;&nbsp;</span><span class="constant numeric c"><span>20</span></span><span>)&nbsp;</span><span class="meta block c"><span class="punctuation section block begin c"><span>{</span></span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;slow&nbsp;down&nbsp;instead&nbsp;(obeying&nbsp;max.&nbsp;accell.&nbsp;&amp;&nbsp;velocity)</span><span>&nbsp;</span></span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;[...]</span><span>&nbsp;</span></span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="meta block c"><span>&nbsp;&nbsp;</span><span class="punctuation section block end c"><span>}</span></span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation whitespace comment leading cpp"><span>&nbsp;&nbsp;</span></span><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;[...]</span><span>&nbsp;</span></span></span></span></div><div class="line"><span class="source cpp"><span class="meta block c"><span class="punctuation section block end c"><span>}</span></span></span></span></div></pre>
 <p>To derive the variables <code>change_lanes_or_slow_down</code>, <code>dont_go_left</code> and
 <code>dont_go_right</code>, from the low-level sensor fusion data of each car on the
@@ -708,7 +711,7 @@ specify if a car is on my lane or the lanes next to me are set
 (<code>o_is_in_my_lane</code>, <code>o_is_left</code>, <code>o_is_right</code>).</li>
 </ul>
 <p><strong>Combining both</strong>: Both are then combined to determine if a car is an obstacle
-for a lane change (ll. 314ff.):</p>
+for a lane change (ll. 324ff.):</p>
 <pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span class="storage type c"><span>bool</span></span><span>&nbsp;o_is_obstacle&nbsp;=&nbsp;(&nbsp;(o_is_ahead&nbsp;&amp;&amp;&nbsp;o_is_slower)</span></span></div><div class="line"><span class="source cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;(o_is_behind&nbsp;&amp;&amp;&nbsp;!o_is_slower)</span></span></div><div class="line"><span class="source cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;o_is_close</span></span></div><div class="line"><span class="source cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;);</span></span></div><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;don&#39;t&nbsp;switch&nbsp;lanes&nbsp;if&nbsp;the&nbsp;car&nbsp;is&nbsp;dangerous</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span>dont_go_left&nbsp;&nbsp;=&nbsp;dont_go_left&nbsp;||&nbsp;(o_is_left&nbsp;&amp;&amp;&nbsp;o_is_obstacle);</span></span></div><div class="line"><span class="source cpp"><span>dont_go_right&nbsp;=&nbsp;dont_go_right&nbsp;||&nbsp;(o_is_right&nbsp;&amp;&amp;&nbsp;o_is_obstacle);</span></span></div></pre>
 <p>As indicated initially, I admit that this approach is far from perfect.
 Especially the heuristic, that tries to guess whether a car is changing lanes
@@ -720,7 +723,7 @@ vector by sampling between two waypoints or by finding a better heuristic,
 potentially involving tracking of cars over various simulator cycles.</p>
 <h3 id="staying-inside-reference-lane">Staying Inside Reference Lane</h3>
 <p>Staying inside the reference lane is achieved by keeping <em>d</em> constant in the
-interpolation of the target trajectory in (3.) (see above) (ll. 382f.):</p>
+interpolation of the target trajectory in (3.) (see above) (ll. 402f.):</p>
 <pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span>&nbsp;&nbsp;vector&lt;</span><span class="storage type c"><span>double</span></span><span>&gt;&nbsp;controlpoint&nbsp;=&nbsp;getXY(my_s+spacing,&nbsp;(</span><span class="constant numeric c"><span>2</span></span><span>+</span><span class="constant numeric c"><span>4</span></span><span>*my_ref_lane),</span></span></div><div class="line"><span class="source cpp"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;map_waypoints_s,&nbsp;map_waypoints_x,&nbsp;map_waypoints_y);</span></span></div></pre>
 <p>The <em>d</em> value is set to the value <code>2+4*my_ref_lane</code>, whereas <code>my_ref_lane</code>
 is kept constant as a state variable between simulator runs.</p>
@@ -731,6 +734,11 @@ subsection) between the old trajectory segment and the new segment, now with
 updated <code>my_ref_lane</code>, results in a smooth trajectory. Lane changes (i.e.,
 increments / decrements of <code>my_ref_lane</code> are only performed after
 preliminary safety checks (see &quot;Avoiding Collisions&quot;).</p>
+<p>In addition to the safety checks, lane changes are only performed when they
+make sense. This includes checking via three minimum-variables which car is
+the closest car ahead in the current lane as well as in the lane to the left
+and to the right (see ll. 265, ll. 311ff. and esp. ll. 338ff.):</p>
+<pre class="editor-colors lang-c++"><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;don&#39;t&nbsp;switch&nbsp;lanes&nbsp;if&nbsp;leading&nbsp;car&nbsp;in&nbsp;target&nbsp;lane&nbsp;is&nbsp;closer&nbsp;than</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span class="comment line double-slash cpp"><span class="punctuation definition comment cpp"><span>//</span></span><span>&nbsp;leading&nbsp;car&nbsp;in&nbsp;current&nbsp;lane</span><span>&nbsp;</span></span></span></div><div class="line"><span class="source cpp"><span>dont_go_left&nbsp;&nbsp;=&nbsp;dont_go_left&nbsp;&nbsp;||&nbsp;(min_dist_left&nbsp;&lt;&nbsp;min_dist_here);</span></span></div><div class="line"><span class="source cpp"><span>dont_go_right&nbsp;=&nbsp;dont_go_right&nbsp;||&nbsp;(min_dist_right&nbsp;&lt;&nbsp;min_dist_here);</span></span></div></pre>
 <h2 id="environment">Environment</h2>
 <h3 id="interfaces">Interfaces</h3>
 <h4 id="data-in-data-highway_map-txt-">Data in <code>data/highway_map.txt</code></h4>
